# cppdiscord

./: .gitignore  CMakeLists.txt  README.md  discord_client.cpp
include/: channel.h  discord_client.h  guild_user.h  user.h  voice_region.h
include/enums/: channel_type.h  client_type.h  content_filter_level.h  notify_level.h  permission.h  status.h  user_type.h  verify_level.h
include/guild/: guild.h  guild_user.h  role.h
object/: channel.cpp  user.cpp
object/guild/: guild.cpp  guild_user.cpp
